minor style fix

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Oneshots</h1>
-        <h3>These are a bunch of super quick one-page projects that I use for making other stuff in my life more convenient. Feel free to use for your own purposes!</h3>
-        <a href="listconvert.html">Convert an unformatted list to a json list.</a>
+        <div style="content-align:center;max-width:90%;">
+            <h1>Oneshots</h1>
+            <blockquote>These are a bunch of super quick one-page projects that I use for making other stuff in my life more convenient. Feel free to use for your own purposes!</blockquote>
+            <a href="listconvert.html">Convert an unformatted list to a json list.</a>
+        </div>
     </body>
 </html>
