forgor to add new link :skull:

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <div style="content-align:center;max-width:90%;">
+        <div style="align-content:center; max-width:90%;">
             <h1>Oneshots</h1>
             <blockquote>These are a bunch of super quick one-page projects that I use for making other stuff in my life more convenient. Feel free to use for your own purposes!</blockquote>
-            <a href="listconvert.html">Convert an unformatted list to a json list.</a>
+            <ul>
+                <li><a href="listconvert.html">Convert an unformatted list to a json list.</a></li>
+                <li><a href="unsortedgen.html">Generate an unsorted list of ints.</a></li>
+            </ul>
         </div>
     </body>
 </html>
