add link to chemparser

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             <ul>
                 <li><a href="listconvert.html">Convert an unformatted list to a json list.</a></li>
                 <li><a href="unsortedgen.html">Generate an unsorted list of ints.</a></li>
+                <li><a href="chemparser.html">Parse a chemical formula into a dict of elements with their counts.</a></li>
             </ul>
         </div>
     </body>
