--- a/molarmass.html
+++ b/molarmass.html
@@ -95,7 +95,7 @@
 
         function parseSubmit(){
             let input = document.getElementById("input").value;
-            els = getAmounts(input, false);
+            let els = getAmounts(input, false);
             document.getElementById("output").innerHTML = getMass(els);
         }
     </script>
