one more syntax fix

--- a/molarmass.html
+++ b/molarmass.html
@@ -84,7 +84,7 @@
         }
 
         function getMass(elements){
-            sum = 0;
+            let sum = 0;
             for(const [key, value] of Object.entries(elements)){
                 let {key} = data;
                 sum += value*(key);
