oops, that one's on me

--- a/molarmass.html
+++ b/molarmass.html
@@ -89,7 +89,7 @@
             let sum = 0;
             for(const [key, value] of Object.entries(elements)){
                 // console.log("KV Pair: " + key + ", " + value);
-                let mass = elements[key];
+                let mass = masses[key];
                 console.log("Mass: " + mass);
                 sum += value*mass;
             }
