--- a/molarmass.html
+++ b/molarmass.html
@@ -9,11 +9,13 @@
         html{
             display:table;
             margin:auto;
+            background-color: #307050;
         }
         body{
             display:table-cell;
             vertical-align: middle;
             text-align: center;
+            font-family: Helvetica, sans-serif;
         }
         #input, #output{
             font-size:32px;
@@ -28,7 +30,13 @@
             width:200px;
             height:50px;
             font-size:20px;
+            background-color: #74bc98;
+            color:#307050;
         }
+        #output{
+            color:#FFFFFF;
+        }
+
     </style>
 </head>
 <body>
@@ -90,7 +98,7 @@
             for(const [key, value] of Object.entries(elements)){
                 // console.log("KV Pair: " + key + ", " + value);
                 let mass = masses[key];
-                console.log("Mass: " + mass);
+                // console.log("Mass: " + mass);
                 sum += value*mass;
             }
             return sum;
@@ -101,7 +109,7 @@
         function parseSubmit(){
             let input = document.getElementById("input").value;
             let els = getAmounts(input, false);
-            document.getElementById("output").innerHTML = getMass(els);
+            document.getElementById("output").innerHTML = getMass(els) + " g/mol";
         }
     </script>
 </body>
