add molarmass link

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
                 <li><a href="listconvert.html">Convert an unformatted list to a json list.</a></li>
                 <li><a href="unsortedgen.html">Generate an unsorted list of ints.</a></li>
                 <li><a href="chemparser.html">Parse a chemical formula into a dict of elements with their counts.</a></li>
+                <li><a href="molarmass.html">Get the molar mass of a chemical formula.</a></li>
             </ul>
         </div>
     </body>
