add fixed length filler.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             <ul>
                 <li><a href="listconvert.html">Convert an unformatted list to a json list.</a></li>
                 <li><a href="unsortedgen.html">Generate an unsorted list of ints.</a></li>
+                <li><a href="fixedlengthfiller.html">Fill a fixed-length array with duplicates of a given item.</a></li>
                 <li><a href="chemparser.html">Parse a chemical formula into a dict of elements with their counts.</a></li>
                 <li><a href="molarmass.html">Get the molar mass of a chemical formula.</a></li>
             </ul>
