--- a/index.html
+++ b/index.html
@@ -1,5 +1,24 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <style>
+        html, body{
+            height:100%;
+        }
+        html{
+            display:table;
+            margin:auto;
+            background-color: #3e996b;
+        }
+        body{
+            display:table-cell;
+            vertical-align: middle;
+            text-align: center;
+            font-family: Helvetica, sans-serif;
+            color: #ffffff;
+        }
+    </style>
+    </head>
     <body>
         <div style="align-content:center; max-width:90%;">
             <h1>Oneshots</h1>
