color updates, title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>ONESHOTS</title>
         <style>
         html, body{
             height:100%;
@@ -16,6 +17,15 @@
             text-align: center;
             font-family: Helvetica, sans-serif;
             color: #ffffff;
+        }
+        p,a{
+            max-width:80%;
+        }
+        p{
+            color:#bdfcdb;
+        }
+        a{
+            color:#307050;
         }
     </style>
     </head>
