--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             color:#bdfcdb;
         }
         a{
-            color:#307050;
+            color:#0d422f;
         }
     </style>
     </head>
