--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
         }
         body{
             display:table-cell;
-            vertical-align: middle;
             text-align: center;
             font-family: Helvetica, sans-serif;
             color: #ffffff;
         }
         p,a{
-            max-width:80%;
+            width:80%;
         }
         p{
             color:#bdfcdb;
