--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <li><a href="fixedlengthfiller.html">Fill a fixed-length array with duplicates of a given item.</a></li>
                 <li><a href="chemparser.html">Parse a chemical formula into a dict of elements with their counts.</a></li>
                 <li><a href="molarmass.html">Get the molar mass of a chemical formula.</a></li>
+                <li><a href="calculatormaker.html">Build and save custom formula calculators.</a></li>
             </ul>
         </div>
     </body>
