trying to fix variable access

--- a/passwordle.html
+++ b/passwordle.html
@@ -14,6 +14,13 @@
             display:flex;
         }
     </style>
+    <script type="text/javascript">
+        const maxGuess = 10;
+        const char_correct = '🟩';
+        const char_wrongposition = '🟨';
+        const char_incorrect = '⬜';
+        let items, password, guessesRemaining;
+    </script>
 </head>
 <body>
     <h1>Passwordle</h1>
@@ -29,11 +36,6 @@
         <input type="Submit" value="Guess Password" id="submit">
     </div>
     <script type="module">
-        const maxGuess = 10;
-        const char_correct = '🟩';
-        const char_wrongposition = '🟨';
-        const char_incorrect = '⬜';
-        let items, password, guessesRemaining;
         async function loadPasswords(){
             await fetch("rockyou.txt")
             .then((res) => res.text())
@@ -44,7 +46,7 @@
             .catch((e) => console.error(e));
             return -1;
         }
-        function getNewPassword(){
+        async function getNewPassword(){
             guessesRemaining = maxGuess;
             selection=Math.random()*items.length;
             password=items[selection];
