--- a/passwordle.html
+++ b/passwordle.html
@@ -19,12 +19,12 @@
         const char_correct = '🟩';
         const char_wrongposition = '🟨';
         const char_incorrect = '⬜';
-        let items, password, guessesRemaining;
+        var items, password, guessesRemaining;
     </script>
 </head>
 <body>
     <h1>Passwordle</h1>
-    <p>Passwordle is a Wordle-like game where you guess a password, randomly chosen from a selection of the rockyou.txt file which contains many common passwords used in brute-force attacks by hackers and penetration testers. The password may be any length. A green character (🟩) indicates a correct character in the correct position. A yellow character (🟨) indicates a character in the word, at a different position. Finall, a blank character (⬜) indicates a letter that is not in the word.</p>
+    <p>Passwordle is a Wordle-like game where you guess a password, randomly chosen from a selection of the rockyou.txt file which contains many common passwords used in brute-force attacks by hackers and penetration testers. The password may be any length. A green character (🟩) indicates a correct character in the correct position. A yellow character (🟨) indicates a character in the word, at a different position. Finally, a blank character (⬜) indicates a letter that is not in the word.</p>
     <p>Please be wary that these passwords may contain offensive, explicit, or sexual language and slurs; play at your own discretion!</p>
     <!-- <label for="input">Enter your chemical equation here:</label> -->
      <div class="game">
@@ -35,18 +35,13 @@
         <br>
         <input type="Submit" value="Guess Password" id="submit">
     </div>
-    <script type="module">
-        async function loadPasswords(){
-            await fetch("rockyou.txt")
-            .then((res) => res.text())
-            .then((text) => {
-                items=text.split("\n");
-                console.log("JSON loaded successfully!");
-            })
-            .catch((e) => console.error(e));
-            return -1;
+    <script type="text/javascript">
+        function loadPasswords(){
+            let text = fetch("rockyou.txt").text()
+            items=text.split("\n");
+            console.log("JSON loaded successfully!");
         }
-        async function getNewPassword(){
+        function getNewPassword(){
             guessesRemaining = maxGuess;
             selection=Math.random()*items.length;
             password=items[selection];
