hopefully fixed fetch using async

--- a/passwordle.html
+++ b/passwordle.html
@@ -36,10 +36,15 @@
         <input type="Submit" value="Guess Password" id="submit">
     </div>
     <script type="text/javascript">
-        function loadPasswords(){
-            let text = fetch("rockyou.txt").text()
-            items=text.split("\n");
-            console.log("JSON loaded successfully!");
+        async function loadPasswords(){
+            await fetch("rockyou.txt")
+            .then(response => response.text())
+            .then(text => {
+                items = text.split("\n");
+                console.log("Passwords loaded successfully!");
+                getNewPassword(); // Call this ONLY after loading completes
+            })
+            .catch(error => console.error("Failed to load file:", error));
         }
         function getNewPassword(){
             guessesRemaining = maxGuess;
@@ -49,7 +54,6 @@
         }
         window.addEventListener("load", (event) => {
             loadPasswords();
-            getNewPassword();
         });
         function guessPassword(input){
             let output = ""
