adding debug statements

--- a/passwordle.html
+++ b/passwordle.html
@@ -48,7 +48,9 @@
         }
         function getNewPassword(){
             guessesRemaining = maxGuess;
+            console.log("[DEBUG] There are " + items.length + " possible passwords.");
             selection=Math.random()*items.length;
+            console.log("[DEBUG] The password index is " + selection);
             password=items[selection];
             console.log("[DEBUG] The password is " + password);
         }
