--- a/passwordle.html
+++ b/passwordle.html
@@ -19,6 +19,7 @@
         const char_correct = '🟩';
         const char_wrongposition = '🟨';
         const char_incorrect = '⬜';
+        const DEBUG = false; // debug flag
         var items, password, guessesRemaining;
     </script>
 </head>
@@ -26,7 +27,6 @@
     <h1>Passwordle</h1>
     <p>Passwordle is a Wordle-like game where you guess a password, randomly chosen from a selection of the rockyou.txt file which contains many common passwords used in brute-force attacks by hackers and penetration testers. The password may be any length. A green character (🟩) indicates a correct character in the correct position. A yellow character (🟨) indicates a character in the word, at a different position. Finally, a blank character (⬜) indicates a letter that is not in the word.</p>
     <p>Please be wary that these passwords may contain offensive, explicit, or sexual language and slurs; play at your own discretion!</p>
-    <!-- <label for="input">Enter your chemical equation here:</label> -->
      <div class="game">
         <div id="guesses">
         </div>
@@ -49,7 +49,7 @@
         function getNewPassword(){
             guessesRemaining = maxGuess;
             console.log("[DEBUG] There are " + items.length + " possible passwords.");
-            selection=Math.random()*items.length;
+            selection=Math.floor(Math.random()*items.length);
             console.log("[DEBUG] The password index is " + selection);
             password=items[selection];
             console.log("[DEBUG] The password is " + password);
