fixing prints, syntax err

--- a/passwordle.html
+++ b/passwordle.html
@@ -19,7 +19,7 @@
         const char_correct = '🟩';
         const char_wrongposition = '🟨';
         const char_incorrect = '⬜';
-        const DEBUG = false; // debug flag
+        const DEBUG = true; // debug flag
         var items, password, guessesRemaining;
     </script>
 </head>
@@ -48,11 +48,11 @@
         }
         function getNewPassword(){
             guessesRemaining = maxGuess;
-            console.log("[DEBUG] There are " + items.length + " possible passwords.");
+            if(DEBUG) console.log("[DEBUG] There are " + items.length + " possible passwords.");
             selection=Math.floor(Math.random()*items.length);
-            console.log("[DEBUG] The password index is " + selection);
+            if(DEBUG) console.log("[DEBUG] The password index is " + selection);
             password=items[selection];
-            console.log("[DEBUG] The password is " + password);
+            if(DEBUG) console.log("[DEBUG] The password is " + password);
         }
         window.addEventListener("load", (event) => {
             loadPasswords();
@@ -65,7 +65,7 @@
                     if (currentChar == password[i]){
                         output += char_correct;
                     } else if (password.includes(currentChar)){
-                        ouptut += char_wrongposition;
+                        output += char_wrongposition;
                     } else {
                         output += char_incorrect;
                     }
@@ -76,7 +76,7 @@
                     output += char_incorrect;
                 }
             }
-            console.log("[DEBUG] Guess characters: " + output);
+            if(DEBUG) console.log("[DEBUG] Guess characters: " + output);
             return output;
         }
 
