shift index scope for checking

--- a/passwordle.html
+++ b/passwordle.html
@@ -59,7 +59,8 @@
         });
         function guessPassword(input){
             let output = ""
-            for (let i = 0; i < input.length; i++){
+            let i;
+            for (i = 0; i < input.length; i++){
                 let currentChar = input[i];
                 if (i < password.length){
                     if (currentChar == password[i]){
