--- a/passwordle.html
+++ b/passwordle.html
@@ -93,7 +93,7 @@
                 output_block.value = output;
                 guesses = document.getElementById("guesses");
                 guesses.append(echo);
-                guess.append(output_block);
+                guesses.append(output_block);
                 guessesRemaining -= 1;
             }
         }
