trading output .values for .innerHTMLs

--- a/passwordle.html
+++ b/passwordle.html
@@ -88,9 +88,9 @@
             if(!input.length == 0){
                 let echo = document.createElement("p");
                 let output_block = document.createElement("p");
-                echo.value = "You guessed: " + input;
+                echo.innerHTML = "You guessed: " + input;
                 let output = guessPassword(input);
-                output_block.value = output;
+                output_block.innerHTML = output;
                 guesses = document.getElementById("guesses");
                 guesses.append(echo);
                 guesses.append(output_block);
