--- a/passwordle.html
+++ b/passwordle.html
@@ -20,7 +20,7 @@
         const char_wrongposition = '🟨';
         const char_incorrect = '⬜';
         const DEBUG = true; // debug flag
-        var items, password, guessesRemaining;
+        var items, password, guessesRemaining, allCorrect
     </script>
 </head>
 <body>
@@ -30,25 +30,31 @@
      <div class="game">
         <div id="guesses">
         </div>
-        <br>
-        <input type="text" id="input" placeholder="Password">
-        <br>
-        <input type="Submit" value="Guess Password" id="submit">
+        <div id="ui">
+            <input type="text" id="input" placeholder="Password">
+            <br>
+            <input type="Submit" value="Guess Password" id="submit">
+            <button hidden="true" id="resetButton" onclick="reset()">Play Again</button>
+        </div>
     </div>
     <script type="text/javascript">
+        let guesses = document.getElementById("guesses");
+        let input = document.getElementById("input");
+        let submit = document.getElementById("submit");
+        let resetButton = document.getElementById("resetButton");
         async function loadPasswords(){
             await fetch("rockyou.txt")
             .then(response => response.text())
             .then(text => {
                 items = text.split("\n");
                 console.log("Passwords loaded successfully!");
+                if(DEBUG) console.log("[DEBUG] There are " + items.length + " possible passwords.");
                 getNewPassword(); // Call this ONLY after loading completes
             })
             .catch(error => console.error("Failed to load file:", error));
         }
         function getNewPassword(){
             guessesRemaining = maxGuess;
-            if(DEBUG) console.log("[DEBUG] There are " + items.length + " possible passwords.");
             selection=Math.floor(Math.random()*items.length);
             if(DEBUG) console.log("[DEBUG] The password index is " + selection);
             password=items[selection];
@@ -57,24 +63,59 @@
         window.addEventListener("load", (event) => {
             loadPasswords();
         });
-        function guessPassword(input){
+        function win(){ // win the game
+            let result = document.createElement("p");
+            result.innerHTML = "The correct password was " + password;
+            let resulttext = document.createElement("h1");
+            resulttext.innerHTML = "YOU WIN!";
+            resulttext.style="color=green";
+            guesses.append(result);
+            guesses.append(resulttext);
+            input.hidden = true;
+            submit.hidden = true;
+            resetButton.hidden = false;
+        }
+        function lose(){ // lose the game
+            let result = document.createElement("p");
+            result.innerHTML = "The correct password was " + password;
+            let resulttext = document.createElement("h1");
+            resulttext.innerHTML = "YOU LOSE!";
+            resulttext.style="color=red";
+            guesses.append(result);
+            guesses.append(resulttext);
+            input.hidden = true;
+            submit.hidden = true;
+            resetButton.hidden = false;
+        }
+        function reset(){ // reset game
+            guesses.innerHTML = "";
+            getNewPassword();
+            resetButton.hidden = true;
+            input.hidden = false;
+            submit.hidden = false;
+        }
+        function guessPassword(input_text){
             let output = ""
             let i;
-            for (i = 0; i < input.length; i++){
-                let currentChar = input[i];
+            allCorrect = true;
+            for (i = 0; i < input_text.length; i++){
+                let currentChar = input_text[i];
                 if (i < password.length){
                     if (currentChar == password[i]){
                         output += char_correct;
                     } else if (password.includes(currentChar)){
                         output += char_wrongposition;
+                        allCorrect = false;
                     } else {
                         output += char_incorrect;
+                        allCorrect = false;
                     }
                 }
             }
             if (i < password.length){ // characters leftover in password
                 for (; i < password.length; i++){
                     output += char_incorrect;
+                    allCorrect = false;
                 }
             }
             if(DEBUG) console.log("[DEBUG] Guess characters: " + output);
@@ -84,17 +125,25 @@
         document.getElementById("submit").addEventListener("click", parseSubmit);
 
         function parseSubmit(){
-            let input = document.getElementById("input").value;
-            if(!input.length == 0){
+            if(!input.value.length == 0){ // input not empty
                 let echo = document.createElement("p");
                 let output_block = document.createElement("p");
-                echo.innerHTML = "You guessed: " + input;
-                let output = guessPassword(input);
+                echo.innerHTML = "You guessed: " + input.value;
+                let output = guessPassword(input.value);
+                // add guess results to guesses
                 output_block.innerHTML = output;
                 guesses = document.getElementById("guesses");
                 guesses.append(echo);
                 guesses.append(output_block);
+                window.scrollTo(0, document.body.scrollHeight);
                 guessesRemaining -= 1;
+                if(allCorrect){ // check to see if we win game
+                    win();
+                }
+                if(guessesRemaining == 0){ // check to see if we lose game
+                    lose();
+                }
+                input.value = ""; // reset input
             }
         }
     </script>
