add guesses remaining

--- a/passwordle.html
+++ b/passwordle.html
@@ -32,9 +32,10 @@
         </div>
         <div id="ui">
             <input type="text" id="input" placeholder="Password">
-            <br>
             <input type="Submit" value="Guess Password" id="submit">
             <button hidden="true" id="resetButton" onclick="reset()">Play Again</button>
+            <p id="guessNumber">Guesses Remaining: </p>
+            <br>
         </div>
     </div>
     <script type="text/javascript">
@@ -42,6 +43,7 @@
         let input = document.getElementById("input");
         let submit = document.getElementById("submit");
         let resetButton = document.getElementById("resetButton");
+        let guessMarker = document.getElementById("guessMarker");
         async function loadPasswords(){
             await fetch("rockyou.txt")
             .then(response => response.text())
@@ -55,6 +57,7 @@
         }
         function getNewPassword(){
             guessesRemaining = maxGuess;
+            guessMarker.innerHTML = "Guesses Remaining: " + guessesRemaining;
             selection=Math.floor(Math.random()*items.length);
             if(DEBUG) console.log("[DEBUG] The password index is " + selection);
             password=items[selection];
@@ -73,6 +76,7 @@
             guesses.append(resulttext);
             input.hidden = true;
             submit.hidden = true;
+            guessesRemaining.hidden = true;
             resetButton.hidden = false;
         }
         function lose(){ // lose the game
@@ -85,6 +89,7 @@
             guesses.append(resulttext);
             input.hidden = true;
             submit.hidden = true;
+            guessesRemaining.hidden = true;
             resetButton.hidden = false;
         }
         function reset(){ // reset game
@@ -93,6 +98,7 @@
             resetButton.hidden = true;
             input.hidden = false;
             submit.hidden = false;
+            guessesRemaining.hidden = false;
         }
         function guessPassword(input_text){
             let output = ""
@@ -137,6 +143,7 @@
                 guesses.append(output_block);
                 window.scrollTo(0, document.body.scrollHeight);
                 guessesRemaining -= 1;
+                guessMarker.innerHTML = "Guesses Remaining: " + guessesRemaining;
                 if(allCorrect){ // check to see if we win game
                     win();
                 }
