--- a/passwordle.html
+++ b/passwordle.html
@@ -34,7 +34,7 @@
             <input type="text" id="input" placeholder="Password">
             <input type="Submit" value="Guess Password" id="submit">
             <button hidden="true" id="resetButton" onclick="reset()">Play Again</button>
-            <p id="guessNumber">Guesses Remaining: </p>
+            <p id="guessMarker">Guesses Remaining: </p>
             <br>
         </div>
     </div>
