--- a/passwordle.html
+++ b/passwordle.html
@@ -19,7 +19,7 @@
         const char_correct = '🟩';
         const char_wrongposition = '🟨';
         const char_incorrect = '⬜';
-        const DEBUG = true; // debug flag
+        const DEBUG = false; // debug flag
         var items, password, guessesRemaining, allCorrect
     </script>
 </head>
