fix win/lose text colors

--- a/passwordle.html
+++ b/passwordle.html
@@ -19,7 +19,7 @@
         const char_correct = '🟩';
         const char_wrongposition = '🟨';
         const char_incorrect = '⬜';
-        const DEBUG = false; // debug flag
+        var DEBUG = false; // debug flag
         var items, password, guessesRemaining, allCorrect
     </script>
 </head>
@@ -71,7 +71,7 @@
             result.innerHTML = "The correct password was " + password;
             let resulttext = document.createElement("h1");
             resulttext.innerHTML = "YOU WIN!";
-            resulttext.style="color=green";
+            resulttext.style.color="green";
             guesses.append(result);
             guesses.append(resulttext);
             input.hidden = true;
@@ -84,7 +84,7 @@
             result.innerHTML = "The correct password was " + password;
             let resulttext = document.createElement("h1");
             resulttext.innerHTML = "YOU LOSE!";
-            resulttext.style="color=red";
+            resulttext.style.color="red";
             guesses.append(result);
             guesses.append(resulttext);
             input.hidden = true;
