--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <li><a href="chemparser.html">Parse a chemical formula into a dict of elements with their counts.</a></li>
                 <li><a href="molarmass.html">Get the molar mass of a chemical formula.</a></li>
                 <li><a href="calculatormaker.html">Build and save custom formula calculators.</a></li>
+                <li><a href="passwordle.html">A Wordle-like where you guess from popular passwords.</a></li>
             </ul>
         </div>
     </body>
