--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
         body{
             display:table-cell;
-            text-align: center;
+            justify-content: center;
             font-family: Helvetica, sans-serif;
             color: #ffffff;
         }
