test more formatting changes

--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
         }
         html{
             display:table;
-            margin:auto;
             background-color: #3e996b;
         }
         body{
+            width:80%;
             display:table-cell;
             justify-content: center;
+            margin:auto;
+            margin-top:5%;
             font-family: Helvetica, sans-serif;
             color: #ffffff;
         }
         p,a{
             width:80%;
+            margin:auto;
         }
         p{
             color:#bdfcdb;
