--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
             height:100%;
         }
         html{
-            display:table;
+            display:flex;
             background-color: #3e996b;
         }
         body{
-            width:80%;
-            display:table-cell;
-            justify-content: center;
+            width:100%;
             margin:auto;
             margin-top:5%;
             font-family: Helvetica, sans-serif;
