--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
             background-color: #3e996b;
         }
         body{
-            width:100%;
+            width:80%;
             margin:auto;
-            margin-top:5%;
+            margin-top:2%;
             font-family: Helvetica, sans-serif;
             color: #ffffff;
         }
         p,a{
             width:80%;
+            justify-content:center;
             margin:auto;
         }
         p{
@@ -30,7 +31,7 @@
     </style>
     </head>
     <body>
-        <div style="align-content:center; max-width:90%;">
+        <div>
             <h1>Oneshots</h1>
             <blockquote>These are a bunch of super quick one-page projects that I use for making other stuff in my life more convenient. Feel free to use for your own purposes!</blockquote>
             <ul>
